--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,6 +40,7 @@ subjects:
 - !lcsh 'Spain -- History -- 19th century'
 - !lcsh 'Spain -- Description and travel'
 - !lcc 'PR'
+- GITenberg
 title: "The Bible in Spain, Vol. 2 [of 2]\r\nOr, the Journeys, Adventures, and Imprisonments\
   \ of an Englishman in an Attempt to Circulate the Scriptures in the Peninsula"
 url: http://www.gutenberg.org/ebooks/35676
